current version
preview.2009-Nov-21
-------------------
- new input parameters enhance screenshot from the command line:
   - mindens   : set minimum density threshold
   - maxdens   : set maximum density threshold
   - com       : boolean to center according to the center of mass 
   - cmapindex : give the colormap index
- colormap can be selected directly from the user interface

- experimental temperature display

1.preview.2009-Jul-16
----------------------
- huge speed up on the rendering engine (up to 1000% !), thanks to :
   - vertex buffer object
   - vertex and pixel shader (via glsl)
   - GL_POINT_SPRITE_ARB and GL_VERTEX_PROGRAM_POINT_SIZE_NV

- density rendering engine, to display and color particles according to their
  density and the distance of their Kth neighbours. It works with gadget2
  snapshots with gas components, and with NEMO snapshots with density field.

- offscreen rendering, using frame buffer object, to take screenshot from the command line and from the GUI

- new input file format phiGRAPE

- possibility to record and display orbits

- list of files does not need header anymore

- camera path using b-splines, to fly over the simulation

- **TONS** of bugs fixed

1.preview.080327
----------------
First public release