@@ -2046,7 +2046,7 @@
                 <string>PNG</string>
                </property>
                <property name="checked">
-                <bool>true</bool>
+                <bool>false</bool>
                </property>
               </widget>
              </item>
@@ -2054,6 +2054,9 @@
               <widget class="QRadioButton" name="frame_jpg">
                <property name="text">
                 <string>JPG</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
